# computer-use-training-generator

./: .gitignore  README.md  pyproject.toml
config/: generator.codex.gpt54.json  generator.default.json  generator.qwen35.gui.json  generator.qwen35.json
src/computer_use_training_generator/: agent.py  cli.py  collector.py  config_utils.py  models.py  subprocess_utils.py  teacher.py  verification.py
tests/: test_agent_daemon.py  test_collector.py  test_verification.py
